EFEKTA-11663 refactor of reflection utilities based on CodeRabbit review